--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -1,3 +1,4 @@
+
 # This workflow will install Python dependencies, run tests and lint with a single version of Python
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-python
 
@@ -15,8 +16,12 @@ permissions:
 jobs:
   build:
 
+    defaults:
+      run:
+        working-directory: ./example-app
+        
     runs-on: ubuntu-latest
-
+    
     steps:
     - uses: actions/checkout@v3
     - name: Set up Python 3.10
