--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -10,8 +10,14 @@ permissions:
   contents: read
 
 jobs:
-  build:
 
+  build:
+    example_matrix:
+      strategy:
+        matrix:
+          version: [10, 12, 14]
+          os: [ubuntu-latest, windows-latest]
+          
     runs-on: ubuntu-latest
     
     defaults:
