--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -12,11 +12,9 @@ permissions:
 jobs:
 
   build:
-    example_matrix:
-      strategy:
-        matrix:
-          version: [10, 12, 14]
-          os: [ubuntu-latest, windows-latest]
+    strategy:
+      matrix:
+        os: ['ubuntu-latest', 'windows-latest']
           
     runs-on: ubuntu-latest
     
